# src/modules/cars/entities/Specification.ts
@@ -1,17 +1,21 @@
+import { Entity,PrimaryColumn,Column,CreateDateColumn } from "typeorm";
 import { v4 as uuidv4 } from "uuid";
 
+@Entity("specifications")
 export class Specification{
-    name: string;
-    description: string;
+    @PrimaryColumn()
     id?: string;
+
+    @Column()
+    name: string;
+    @Column()
+    description: string;
+    @CreateDateColumn()
     created_at?: Date
 
     constructor() {
         if (!this.id) {
             this.id = uuidv4()
-        }
-        if (!this.created_at) {
-            this.created_at = new Date()
         }
     }
 }
